@@ -191,3 +191,14 @@ require_once __DIR__ . '/modinfo.php';
 <li>%p/members/images/</li>
 <li>%p/temp/</li>
 </ul>');
+// Clone feature
+\define('_AM_WGTEAMS_CLONE', 'Clone');
+\define('_AM_WGTEAMS_CLONE_DSC', 'Cloning a module has never been this easy! Just type in the name you want for it and hit submit button!');
+\define('_AM_WGTEAMS_CLONE_TITLE', 'Clone %s');
+\define('_AM_WGTEAMS_CLONE_NAME', 'Choose a name for the new module');
+\define('_AM_WGTEAMS_CLONE_NAME_DSC', 'Do not use special characters! <br>Do not choose an existing module dirname or database table name!');
+\define('_AM_WGTEAMS_CLONE_INVALIDNAME', 'ERROR: Invalid module name, please try another one!');
+\define('_AM_WGTEAMS_CLONE_EXISTS', 'ERROR: Module name already taken, please try another one!');
+\define('_AM_WGTEAMS_CLONE_CONGRAT', 'Congratulations! %s was sucessfully created!<br>You may want to make changes in language files.');
+\define('_AM_WGTEAMS_CLONE_IMAGEFAIL', 'Attention, we failed creating the new module logo. Please consider modifying assets/images/logo_module.png manually!');
+\define('_AM_WGTEAMS_CLONE_FAIL', 'Sorry, we failed in creating the new clone. Maybe you need to temporally set write permissions (CHMOD 777) to modules folder and try again.');
