@@ -13,6 +13,7 @@
  - new update with db migration (goffy)
  - replaced Common/XoopsConfirm by Common/Confirm (mamba/goffy)
  - uninstall with bak-file creation (mamba/goffy)
+ - added clone feature (goffy)
  
 <h5>1.10 Final</h5> [2020/07/03]
 <hr>
